--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>org.example</groupId>
     <artifactId>student-test</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
+        <spring.version>5.2.10.RELEASE</spring.version>
+        <junit-jupiter.version>5.7.0</junit-jupiter.version>
+        <mockito-core.version>2.23.0</mockito-core.version>
+        <slf4j-api.version>1.7.30</slf4j-api.version>
+        <logback-core.version>1.2.3</logback-core.version>
+        <logback-classic.version>1.2.3</logback-classic.version>
+        <opencsv.version>2.3</opencsv.version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -21,22 +32,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
-                <version>2.22.0</version>
+                <version>${maven-surefire-plugin.version}</version>
             </plugin>
-
         </plugins>
     </build>
-
-    <properties>
-        <spring.version>5.2.10.RELEASE</spring.version>
-        <jupiter.version>RELEASE</jupiter.version>
-        <opencsv.version>2.3</opencsv.version>
-        <slf4j-api.version>1.7.30</slf4j-api.version>
-        <logback-core.version>1.2.3</logback-core.version>
-        <logback-classic.version>1.2.3</logback-classic.version>
-        <slf4j-api.version1>1.7.26</slf4j-api.version1>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -46,21 +45,14 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.7.0</version>
+            <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>net.sf.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>${opencsv.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j-api.version1}</version>
-        </dependency>
-
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
@@ -69,7 +61,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.23.0</version>
+            <version>${mockito-core.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
